# vimium-rs

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  vite.config.js
extension/: background.js  content.js
public/: manifest.json
src/: lib.rs
