[package]
name = "vimium-rs-wasm"
version = "0.1.0"
edition = "2021"
description = "Rust WebAssembly core for keyboard-centric browser navigation"
license = "GPL-3.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
regex = { version = "1.11.1", default-features = false, features = ["std", "perf", "unicode"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
